--- a/vignettes/simulate-interval-beta.Rmd
+++ b/vignettes/simulate-interval-beta.Rmd
@@ -89,5 +89,77 @@ hist(interval_width, breaks = 30, col = "#0A6AA6", border = "white",
 ```
 
 These simulated objects can be passed directly to the modelling routines in
-`SelectBoost.beta`. For instance, `select_boost_beta()` expects the design matrix
-`sim$X` and the interval bounds, and seamlessly handles fully observed rows. 
+`SelectBoost.beta`. The following sections outline how to turn the generated
+intervals into pseudo-observations for classical selectors, how to obtain stable frequencies with the interval-aware fastboost routine, and how to visualise the results side by side.
+
+## Point-response selectors on pseudo-observations
+
+When only interval bounds are observed, a quick way to obtain a point response is to impute either the midpoint or the available bound in case of one-sided censoring. The helper below keeps the midpoint when both bounds are present and falls back to the observed edge otherwise.
+
+```{r}
+pseudo_y <- ifelse(
+  is.na(sim$Y_low) | is.na(sim$Y_high),
+  ifelse(is.na(sim$Y_low), sim$Y_high, sim$Y_low),
+  0.5 * (sim$Y_low + sim$Y_high)
+)
+```
+
+With this pseudo-response in hand, we can deploy the full suite of selectors
+shipped with the package. The `compare_selectors_single()` wrapper runs the
+stepwise AIC/BIC/AICc procedures, the GAMLSS-based LASSO and the IRLS/`glmnet` approach in one call. Setting `include_enet = FALSE` ensures the example remains lightweight even when the optional `gamlss.lasso` extension is not installed.
+
+```{r}
+single <- compare_selectors_single(sim$X, pseudo_y, include_enet = FALSE)
+head(single$table)
+```
+
+The bootstrap helper `compare_selectors_bootstrap()` repeats this exercise over resampled datasets, providing empirical selection frequencies for each method.
+
+```{r}
+freq <- compare_selectors_bootstrap(
+  sim$X, pseudo_y, B = 15, include_enet = FALSE, seed = 321
+)
+head(freq)
+```
+
+Merging both outputs with `compare_table()` gives a compact summary containing the per-run coefficients and the associated bootstrap frequencies.
+
+```{r}
+summary_tab <- compare_table(single$table, freq)
+head(summary_tab)
+```
+
+## Visual comparisons
+
+The package offers quick visualisation helpers that default to base graphics
+but automatically use `ggplot2` when it is available. The coefficient heatmap
+highlights which variables are selected and their estimated effect sizes across selectors.
+
+```{r}
+plot_compare_coeff(single$table)
+```
+
+Selection frequencies from the bootstrap stage can be plotted in the same
+manner, providing a stability-oriented counterpart to the coefficient map.
+
+```{r}
+plot_compare_freq(freq)
+```
+
+## Interval stability selection with `fastboost_interval`
+
+Instead of reducing intervals to single values, the `fastboost_interval()`
+routine repeatedly samples pseudo-responses inside each interval before running the chosen selector. The resulting selection frequencies account for the uncertainty carried by the censored observations.
+
+```{r}
+fb <- fastboost_interval(
+  sim$X, sim$Y_low, sim$Y_high,
+  func = function(X, y) betareg_glmnet(X, y, choose = "bic", prestandardize = TRUE),
+  B = 30, seed = 99
+)
+sort(fb$freq, decreasing = TRUE)[1:5]
+```
+
+These additions demonstrate how the simulation engine, the collection of
+selectors, and the fast interval booster interact in a cohesive workflow for
+interval-valued beta regression problems.
